--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.github.d-max:spots-dialog:0.7'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
