--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.github.d-max:spots-dialog:0.7'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.mohammadatif:Animatoo:master'
 }
